<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/label1" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label2" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBox" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBox4" />

    <TextView
        android:id="@+id/label3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label3" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/o"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OUI" />

        <RadioButton
            android:id="@+id/n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NON" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/quitter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_quitter"
            android:text="Quitter" />

        <Button
            android:id="@+id/suivant"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_suivant"
            android:text="Suivant" />
    </LinearLayout>
</LinearLayout>